split wire/wireless train

--- a/bysen32_script/1.3.dataset_table2label.ipynb
+++ b/bysen32_script/1.3.dataset_table2label.ipynb
@@ -63,14 +63,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12104/12104 [04:48<00:00, 41.94it/s] "
+      "100%|██████████| 6615/6615 [02:06<00:00, 52.44it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "table error: 688\n"
+      "table error: 286\n"
      ]
     },
     {
@@ -93,8 +93,9 @@
     "使用 fix_gt_table 后 报错的：665\n",
     "    + 清除area==0的数据：664\n",
     "'''\n",
-    "DATASET = \"train_jpg480max\"\n",
+    "DATASET = \"train_jpg480max_wireless\"\n",
     "DATASET_ROOT = '/media/ubuntu/Date12/TableStruct/new_data'\n",
+    "\n",
     "TABLE_DIR = os.path.join(DATASET_ROOT, DATASET)\n",
     "LABEL_DIR = os.path.join(DATASET_ROOT, f'{DATASET}_gt_json')\n",
     "TABLE_ERROR_PATH = os.path.join(DATASET_ROOT, f'{DATASET}_error.json')\n",
