--- a/bysen32_script/1.4.dataset_gen_kfold.ipynb
+++ b/bysen32_script/1.4.dataset_gen_kfold.ipynb
@@ -22,8 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET = \"train_jpg480max\"\n",
+    "DATASET = \"train_jpg480max_wireless\"\n",
     "DATASET_ROOT = '/media/ubuntu/Date12/TableStruct/new_data'\n",
+    "\n",
+    "\n",
     "LABEL_DATA_DIR = os.path.join(DATASET_ROOT, f\"{DATASET}_gt_json\")\n",
     "FOLD_K = 10\n",
     "\n",
