--- a/bysen32_script/2.1.result_pkl2pred.ipynb
+++ b/bysen32_script/2.1.result_pkl2pred.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,75 +56,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|████▉     | 1295/2593 [00:09<00:07, 170.40it/s]"
+      " 58%|█████▊    | 822/1428 [00:05<00:03, 156.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "format_table error 04882.jpg\n",
-      "<thead>,</thead>,<tbody>,<tr>,<td, rowspan=\"3\",>,</td>,<td></td>,<td, colspan=\"2\",>,</td>,<td, colspan=\"2\",>,</td>,<td, colspan=\"2\",>,</td>,<td, colspan=\"3\",>,</td>,</tr>,<tr>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>, colspan=\"3\",>,</td>,</tr>,<tr>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>, colspan=\"3\",>,</td>,</tr>,<tr>,<td, rowspan=\"4\",>,</td>,<td, rowspan=\"2\",>,</td>,<td, rowspan=\"2\", colspan=\"4\",>,</td>,<td, rowspan=\"2\", colspan=\"2\",>,</td>,<td, rowspan=\"2\",>,</td>,<td, colspan=\"2\",>,</td>,<td, rowspan=\"2\",>,</td>,</tr>,<tr>,<td, colspan=\"4\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td, colspan=\"4\",>,</td>,<td, colspan=\"3\",>,</td>,<td></td>,</tr>,<tr>,<td></td>,<td, colspan=\"8\",>,</td>,<td></td>,</tr>,<tr>,<td,</thead>,<tbody>,<tr>,<td, rowspan=\"3\",>,</td>,<td, rowspan=\"2\",>,</td>,<td, colspan=\"4\",>,</td>,<td, colspan=\"6\",>,</td>,<td, rowspan=\"2\",>,</td>,<td, rowspan=\"2\",>,</td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"6\",>,</td>,<td, rowspan=\"6\",>,</td>,<td></td>,<td></td>,<td, rowspan=\"6\",>,</td>,<td, rowspan=\"6\",>,</td>,<td, rowspan=\"6\",>,</td>,<td, rowspan=\"6\",>,</td>,<td></td>,<td, rowspan=\"6\",>,</td>,<eb></eb>, rowspan=\"6\",>,</td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"5\",>,</td>,<td, rowspan=\"5\",>,</td>,<td></td>,<td></td>,<td, rowspan=\"5\",>,</td>,<td, rowspan=\"5\",>,</td>,<td, rowspan=\"5\",>,</td>,<eb></eb>, rowspan=\"5\",>,</td>,<td></td>,<td, rowspan=\"5\",>,</td>,<eb></eb>, rowspan=\"5\",>,</td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,</tbody>\n"
+      "format_table error 00720.jpg\n",
+      "<thead>,</thead>,<tbody>,<tr>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,</tr>,<tr>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"3\",>,</td>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<eb></eb>,</tr>,<tr>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,</tr>,<tr>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,</tr>,<tr>,<td,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,</tbody>\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 98%|█████████▊| 2548/2593 [00:18<00:00, 131.74it/s]"
+      " 61%|██████    | 872/1428 [00:05<00:04, 138.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "format_table error 03669.jpg\n",
-      "<thead>,</thead>,<tbody>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<eb></eb>, rowspan=\"3\",>,</td>,<td, rowspan=\"3\",>,</td>,<td, rowspan=\"3\",>,</td>,<td, rowspan=\"3\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"6\",>,</td>,<td\n"
+      "format_table error 02571.jpg\n",
+      "<thead>,</thead>,<tbody>,<tr>,<td, colspan=\"7\",>,</td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,</tr>,</tbody>\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2593/2593 [00:18<00:00, 138.39it/s]\n",
-      " 15%|█▌        | 394/2594 [00:03<00:21, 104.18it/s]"
+      " 90%|█████████ | 1289/1428 [00:08<00:00, 165.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "format_table error 01657.jpg\n",
-      "<thead>,</thead>,<tbody>,<tr>,<td, colspan=\"6\",>,</td>,</tr>,<tr>,<td, colspan=\"6\",>,</td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td,<eb></eb>,<eb></eb>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,</tbody>\n"
+      "format_table error 01514.jpg\n",
+      "<thead>,</thead>,<tbody>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td, rowspan=\"9\",>,</td>,<td\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2594/2594 [00:19<00:00, 136.53it/s]"
+      "100%|██████████| 1428/1428 [00:09<00:00, 145.73it/s]\n",
+      " 22%|██▏       | 317/1429 [00:02<00:07, 155.08it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "format_table error 03289.jpg\n",
-      "<thead>,</thead>,<tbody>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"5\",>,</td>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"3\",>,</td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"4\",>,</td>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"4\",>,</td>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,<td\n"
+      "format_table error 01937.jpg\n",
+      "<thead>,</thead>,<tbody>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"6\",>,</td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      " 39%|███▊      | 552/1429 [00:03<00:04, 183.69it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "format_table error 01489.jpg\n",
+      "<thead>,</thead>,<tbody>,<tr>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"4\",>,</td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,</tr>,<tr>,<td\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 61%|██████▏   | 876/1429 [00:05<00:03, 159.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "format_table error 00193.jpg\n",
+      "<thead>,</thead>,<tbody>,<tr>,<td,<UKN>,>,</td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"5\",>,</td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<td,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td, rowspan=\"3\",>,</td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<td, rowspan=\"2\",>,</td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<td></td>,<td></td>,<td></td>,</tr>,<tr>,<td, rowspan=\"3\",>,</td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td, rowspan=\"3\",>,</td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>,<td></td>,<td></td>,<td></td>,<eb></eb>,<td></td>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,<eb></eb>,</tr>,<tr>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1429/1429 [00:09<00:00, 147.37it/s]\n"
      ]
     }
    ],
@@ -140,7 +170,10 @@
     "# result_file = \"./output/structure_result/test_A/structure_master_results_0.pkl\"\n",
     "# result_file_dir = os.path.dirname(result_file)\n",
     "\n",
-    "DATASET = \"test_A_jpg480max\"\n",
+    "DATASET = \"test_A_jpg480max_wireless\"\n",
+    "\n",
+    "\n",
+    "\n",
     "JPG_JSON_PATH = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}.json\"\n",
     "JPG_INFO = json.load(open(JPG_JSON_PATH, 'r'))\n",
     "PRED_PKL_DIR = f\"../output/structure_result/{DATASET}\"\n",
