--- a/bysen32_script/2.2.result_pred2submit.ipynb
+++ b/bysen32_script/2.2.result_pred2submit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,25 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5187/5187 [00:30<00:00, 170.00it/s]\n"
+      "100%|██████████| 2857/2857 [00:15<00:00, 181.78it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "dataset = \"test_A_jpg480max\"\n",
-    "pred_json_dir = f\"./output/structure_result/{dataset}-pred.json\"\n",
-    "jpg_json_path = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}.json\"\n",
+    "DATASET = \"test_A_jpg480max_wireless\"\n",
+    "\n",
+    "\n",
+    "pred_json_dir = f\"./output/structure_result/{DATASET}-pred.json\"\n",
+    "jpg_json_path = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}.json\"\n",
     "jpg_info = json.load(open(jpg_json_path, 'r'))\n",
     "\n",
-    "submit_dir = \"./output/structure_result/submit\"\n",
+    "submit_dir = f\"./output/structure_result/{DATASET}_submit\"\n",
     "if os.path.exists(submit_dir):\n",
     "    shutil.rmtree(submit_dir)\n",
     "Path(submit_dir).mkdir(parents=True, exist_ok=True)\n",
