--- a/bysen32_script/A2.infer_visualize.ipynb
+++ b/bysen32_script/A2.infer_visualize.ipynb
@@ -10,21 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|██▏       | 4/18 [00:00<00:00, 36.75it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 18/18 [00:01<00:00, 17.79it/s]\n"
+      "100%|██████████| 2857/2857 [01:07<00:00, 42.53it/s]\n"
      ]
     }
    ],
@@ -61,7 +54,9 @@
     "        x1, y1, x2, y2 = np.array(cell['bbox']).astype(np.int32).tolist()\n",
     "        row_start, row_end = cell[\"row_start_idx\"], cell[\"row_end_idx\"]\n",
     "        col_start, col_end = cell[\"col_start_idx\"], cell[\"col_end_idx\"]\n",
-    "        text = f\"{row_start}-{row_end}, {col_start}-{col_end}\"\n",
+    "        row_text = f\"{row_start}\" if row_start == row_end else f\"{row_start}-{row_end}\"\n",
+    "        col_text = f\"{col_start}\" if col_start == col_end else f\"{col_start}-{col_end}\"\n",
+    "        text = f\"{row_text},{col_text}\"\n",
     "\n",
     "        if row_end >= col2color.shape[0]:\n",
     "            color = np.array((0, 0, 255))\n",
@@ -72,18 +67,17 @@
     "        font_scale = min(width, height)//1024\n",
     "        font_scale = max(font_scale, 0.5)\n",
     "        font_thickness = int(font_scale * 2)\n",
-    "        font_height = int(font_scale * 20)\n",
-    "        cv2.putText(src_img, text, (x1, y1+font_height), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
+    "        cv2.putText(src_img, text, (x1, y1), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
     "\n",
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 参数：数据集名称\n",
-    "dataset = \"test_A_jpg480max\"\n",
+    "dataset = \"test_A_jpg480max_wireless\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}\"\n",
-    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/data/test_A\"\n",
     "# pred_json_dir   = f\"./output/structure_result/FINAL_FUSION/\"\n",
-    "pred_json_dir   = f\"./output/structure_result/10fold2_epoch_29_val92.87_test92.21/\"\n",
+    "pred_json_dir   = f\"./output/structure_result/test_A_jpg480max_wireless-pred.json/\"\n",
+    "# pred_json_dir   = f\"./output/structure_result/submit/\"\n",
     "# 输出目录\n",
     "pred_visual_dir = f\"./output/structure_result/{dataset}-pred.json_visualize/\"\n",
     "if os.path.exists(pred_visual_dir):\n",
@@ -91,8 +85,7 @@
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "file_ext = \"jpg\" if \"jpg\" in dataset else \"png\"\n",
-    "file_ext = \"png\"\n",
-    "img_paths = sorted(glob(os.path.join(img_data_dir, f\"*.{file_ext}\")))[382:400]\n",
+    "img_paths = sorted(glob(os.path.join(img_data_dir, f\"*.{file_ext}\")))[:]\n",
     "for src_img_path in tqdm(img_paths):\n",
     "    src_img_file = os.path.basename(src_img_path)\n",
     "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(f\".{file_ext}\", \"-pred.json\"))\n",
