--- a/bysen32_script/2.2.result_pred2submit.ipynb
+++ b/bysen32_script/2.2.result_pred2submit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2857/2857 [00:15<00:00, 181.78it/s]\n"
+      "100%|██████████| 2330/2330 [00:16<00:00, 145.07it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "DATASET = \"test_A_jpg480max_wireless\"\n",
+    "DATASET = \"test_A_jpg480max_wire\"\n",
     "\n",
     "\n",
     "pred_json_dir = f\"./output/structure_result/{DATASET}-pred.json\"\n",
