--- a/bysen32_script/A2.infer_visualize.ipynb
+++ b/bysen32_script/A2.infer_visualize.ipynb
@@ -10,14 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2857/2857 [01:07<00:00, 42.53it/s]\n"
+      "100%|██████████| 2330/2330 [03:21<00:00, 11.56it/s]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。请查看单元格中的代码，以确定故障的可能原因。有关详细信息，请单击 <a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>。有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
      ]
     }
    ],
@@ -72,12 +80,13 @@
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 参数：数据集名称\n",
-    "dataset = \"test_A_jpg480max_wireless\"\n",
+    "dataset = \"test_A_jpg480max_wire\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}\"\n",
     "# pred_json_dir   = f\"./output/structure_result/FINAL_FUSION/\"\n",
-    "pred_json_dir   = f\"./output/structure_result/test_A_jpg480max_wireless-pred.json/\"\n",
+    "# pred_json_dir   = f\"./output/structure_result/test_A_jpg480max_wire-pred.json/\"\n",
     "# pred_json_dir   = f\"./output/structure_result/submit/\"\n",
+    "pred_json_dir   = f\"./output/structure_result/{dataset}-pred.json/\"\n",
     "# 输出目录\n",
     "pred_visual_dir = f\"./output/structure_result/{dataset}-pred.json_visualize/\"\n",
     "if os.path.exists(pred_visual_dir):\n",
