--- a/bysen32_script/A1.label_visualize.ipynb
+++ b/bysen32_script/A1.label_visualize.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6615/6615 [01:53<00:00, 58.42it/s] \n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -22,17 +30,19 @@
     "from glob import glob\n",
     "import json\n",
     "import numpy as np\n",
+    "import shutil\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
     "\n",
-    "def table_img_visualize(src_img_path, pred_json_path, dst_img_path):\n",
+    "def img_label_visualize(src_img_path, pred_json_path, dst_img_path):\n",
     "    # 按行生成彩色标注框\n",
     "    col2color = []\n",
     "    for i in range(3):\n",
     "        for j in range(3):\n",
     "            for k in range(3):\n",
     "                col2color.append((i*100, j*100, k*100))\n",
+    "    col2color.append((255, 0, 0))\n",
     "    col2color = np.array(col2color)\n",
     "\n",
     "    # 加载图像\n",
@@ -43,38 +53,39 @@
     "        x1, y1, x2, y2 = np.array(cell['bbox']).astype(dtype=int).tolist()\n",
     "        row_start, row_end = cell[\"row_start_idx\"], cell[\"row_end_idx\"]\n",
     "        col_start, col_end = cell[\"col_start_idx\"], cell[\"col_end_idx\"]\n",
-    "        text = f\"{row_start}-{row_end}, {col_start}-{col_end}\"\n",
+    "        text = f\"{row_start}\" if row_start == row_end else f\"{row_start}-{row_end}\"\n",
+    "        text += f\",{col_start}\" if col_start == col_end else f\",{col_start}-{col_end}\"\n",
     "\n",
     "        \n",
-    "        if row_end >= col2color.shape[0]:\n",
-    "            color = np.array((0, 0, 255))\n",
-    "        else:\n",
-    "            color = (col2color[row_start] + col2color[row_end])//2\n",
+    "        color = col2color[col_start] if col_start < col2color.shape[0] else col2color[-1]\n",
     "        cv2.rectangle(src_img, (x1, y1, x2-x1, y2-y1), color.tolist(), 1)\n",
     "        width, height = src_img.shape[1], src_img.shape[0]\n",
     "        font_scale = min(width, height)//1024\n",
     "        font_scale = max(font_scale, 0.5)\n",
     "        font_thickness = int(font_scale * 2)\n",
     "        font_height = int(font_scale * 20)\n",
-    "        cv2.putText(src_img, text, (x1, y1+font_height), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
+    "        cv2.putText(src_img, text, (x1, y1), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
     "        \n",
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 数据集名称\n",
-    "dataset = \"train_jpg480max\"\n",
+    "DATASET = \"train_jpg480max_wireless\"\n",
     "# 输入数据目录\n",
-    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}/\"\n",
-    "json_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}_gt_json/\"\n",
+    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}\"\n",
+    "json_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}_gt_json\"\n",
     "# 输出目录\n",
-    "pred_visual_dir = f\"./output/structure_result/{dataset}-visualize/\"\n",
+    "pred_visual_dir = f\"./output/structure_result/{DATASET}-visualize/\"\n",
+    "if os.path.exists(pred_visual_dir):\n",
+    "    shutil.rmtree(pred_visual_dir)\n",
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for src_img_path in tqdm(glob(img_data_dir+\"*.jpg\")):\n",
+    "imgs = sorted(glob(os.path.join(img_data_dir, \"*.jpg\")))\n",
+    "for src_img_path in tqdm(imgs):\n",
     "    src_img_file = os.path.basename(src_img_path)\n",
     "    pred_json_path = os.path.join(json_data_dir, src_img_file.replace(\".jpg\", \"-gt.json\"))\n",
     "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(\".jpg\", \".jpg\"))\n",
     "    if os.path.exists(pred_json_path):\n",
-    "        table_img_visualize(src_img_path, pred_json_path, dst_img_path)\n"
+    "        img_label_visualize(src_img_path, pred_json_path, dst_img_path)\n"
    ]
   },
   {
