--- a/bysen32_script/A2.infer_visualize.ipynb
+++ b/bysen32_script/A2.infer_visualize.ipynb
@@ -17,15 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2330/2330 [03:21<00:00, 11.56it/s]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。请查看单元格中的代码，以确定故障的可能原因。有关详细信息，请单击 <a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>。有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+      "100%|██████████| 2857/2857 [01:05<00:00, 43.64it/s]\n"
      ]
     }
    ],
@@ -80,7 +72,7 @@
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 参数：数据集名称\n",
-    "dataset = \"test_A_jpg480max_wire\"\n",
+    "dataset = \"test_A_jpg480max_wireless\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}\"\n",
     "# pred_json_dir   = f\"./output/structure_result/FINAL_FUSION/\"\n",
