--- a/bysen32_script/C1.ext_gt.txt_transform.ipynb
+++ b/bysen32_script/C1.ext_gt.txt_transform.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [01:15<00:00, 65.99it/s]\n"
+      "100%|██████████| 3000/3000 [00:24<00:00, 122.78it/s]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "import os\n",
     "import numpy as np\n",
     "import json\n",
@@ -88,9 +89,9 @@
     "ext_data_save_dir = os.path.join(EXT_DATA_ROOT, \"train\")\n",
     "if os.path.exists(ext_data_save_dir):\n",
     "    shutil.rmtree(ext_data_save_dir)\n",
-    "shutil.copytree(os.path.join(EXT_DATA_ROOT, \"img\"), ext_data_save_dir)\n",
+    "shutil.copytree(os.path.join(EXT_DATA_ROOT, \"img2\"), ext_data_save_dir)\n",
     "\n",
-    "ext_gt_txt_file = os.path.join(EXT_DATA_ROOT, \"gt.txt\")\n",
+    "ext_gt_txt_file = os.path.join(EXT_DATA_ROOT, \"gt2.txt\")\n",
     "gt_data = open(ext_gt_txt_file, 'r').readlines()\n",
     "for data in tqdm(gt_data):\n",
     "    data = eval(data)\n",
@@ -106,7 +107,7 @@
     "    tokens = format_tokens(','.join(tokens))\n",
     "    tokens = merge_token(tokens)\n",
     "\n",
-    "    html = get_html(tokens, bboxes)\n",
+    "    html = get_html(tokens, bboxes, bbox_format='xyxy')\n",
     "    table = html_to_table(html)\n",
     "        \n",
     "    try:\n",
