--- a/bysen32_script/C2.dataset_gen_kfold.ipynb
+++ b/bysen32_script/C2.dataset_gen_kfold.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET = \"train_wire\"\n",
+    "DATASET = \"train_wireless\"\n",
     "DATASET_ROOT = '/media/ubuntu/Date12/TableStruct/ext_data'\n",
     "\n",
     "\n",
