--- a/bysen32_script/2.2.result_pred2submit.ipynb
+++ b/bysen32_script/2.2.result_pred2submit.ipynb
@@ -117,13 +117,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2330/2330 [00:16<00:00, 145.07it/s]\n"
+      "100%|██████████| 2857/2857 [00:13<00:00, 209.25it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "DATASET = \"test_A_jpg480max_wire\"\n",
+    "DATASET = \"test_A_jpg480max_wireless\"\n",
     "\n",
     "\n",
     "pred_json_dir = f\"./output/structure_result/{DATASET}-pred.json\"\n",
